--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.30.0
-pandas==2.1.0
-sentence-transformers==2.3.0
-scikit-learn==1.3.0
-numpy==1.24.3
-torch==2.1.0
-transformers==4.36.0
+streamlit
+pandas
+sentence-transformers
+scikit-learn
+numpy
+torch
+transformers
